<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.shoe_list.ShoeViewModel" />
    </data>

    <!--
    This screen represent shoe details layout to add new shoe
    with 4 labels and 4 text views for (name, size, description and company).
    and also have 2 buttons save for saving the new shoe and
    cancel for cancel saving the new shoe.
    using constraint layout for align complex views in the layout.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_med">

        <TextView
            android:id="@+id/name_tv"
            style="@style/LabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/name_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_et" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margin"
            android:inputType="text"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/size_tv"
            style="@style/LabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@id/size_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/size_et" />

        <EditText
            android:id="@+id/size_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margin"
            android:layout_marginTop="@dimen/field_margin"
            android:inputType="numberDecimal"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/size_tv"
            app:layout_constraintTop_toBottomOf="@id/name_et" />

        <TextView
            android:id="@+id/description_tv"
            style="@style/LabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@id/description_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/description_et" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margin"
            android:layout_marginTop="@dimen/field_margin"
            android:text="@={viewModel.shoeDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/description_tv"
            app:layout_constraintTop_toBottomOf="@id/size_et" />

        <TextView
            android:id="@+id/company_tv"
            style="@style/LabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@id/company_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/company_et" />

        <EditText
            android:id="@+id/company_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margin"
            android:layout_marginTop="@dimen/field_margin"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/company_tv"
            app:layout_constraintTop_toBottomOf="@id/description_et" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin"
            android:layout_marginEnd="@dimen/field_margin"
            android:text="@string/save"
            android:textAllCaps="false"
            android:onClick="@{()->viewModel.onSaveShoeClicked()}"
            app:layout_constraintEnd_toStartOf="@id/cancel_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_et" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@id/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()->viewModel.onCancelClicked()}"
            app:layout_constraintStart_toEndOf="@id/save_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>