<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin"
        tools:context=".screens.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/email_et"
                app:layout_constraintBottom_toBottomOf="@id/email_et"
                />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                android:transitionName="email_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/email_label"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/field_margin"/>


            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/password_et"
                app:layout_constraintBottom_toBottomOf="@id/password_et"
                />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_margin"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintStart_toEndOf="@id/password_label"
                app:layout_constraintTop_toBottomOf="@id/email_et"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/field_margin"
                />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/field_margin"
                android:onClick="@{()->viewModel.onLoginClicked()}"
                android:text="@string/login_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signup_btn"
                app:layout_constraintTop_toBottomOf="@id/password_et"

                android:layout_marginTop="@dimen/field_margin"
                />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onLoginClicked()}"
                android:text="@string/join_us"
                app:layout_constraintStart_toEndOf="@id/login_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_et"
                android:layout_marginTop="@dimen/field_margin"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>